2003-07-27  Brian Gough  <bjg@network-theory.co.uk>

	* gumbel1.c (gsl_cdf_gumbel1_Q): use pow in place of exp since
	compilers seem to handle overflow better in this case (perhaps
	because it is not an intrinsic function).

	* gumbel2.c (gsl_cdf_gumbel2_P): handle case of x = 0 explicitly
	(gsl_cdf_gumbel2_Q): handle case of x = 0 explicitly

2003-07-22  Brian Gough  <bjg@network-theory.co.uk>

	* gamma.c (gsl_cdf_gamma_P): Peizer and Pratt approximation for
	large a seems to be inaccurate in tails
	(gsl_cdf_gamma_Q): Peizer and Pratt approximation for large a
	seems to be inaccurate in tails

	* test.c (main): added test for large a for gamma

	* cauchyinv.c (gsl_cdf_cauchy_Qinv): corrected limiting value for
	Q=1

	* added Cumulative Distribution functions from savannah.gnu.org
